syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

// Register

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
  }
  
  message RegisterResponse {
    int64 status = 1;
    string error = 2;
  }

// Login

message LoginRequest{
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse{
  int64 status = 1;
  string error = 2;
  string accesstoken =3;
}

// export PATH="$PATH:$(go env GOPATH)/bin"
// protoc --go_out=. --go-grpc_out=. pkg/pb/auth.proto